[package]
name = "pickpicpack"
version = "0.1.4"
edition = "2021"
authors = ["Roman Chumak <p4ymak@gmail.com>"]
resolver = "2"
description = "Packing multiple images to one."

[package.metadata.bundle]
name = "PickPicPack"
identifier = "com.p4.pickpicpack"
icon = ["./icon/32x32.png", "./icon/128x128.png", "./icon/128x128@2x.png"]
copyright = "Copyright (c) Roman Chumak 2021. All rights reserved."
category = "Graphics and Design"
short_description = "Packing multiple images to one."
long_decription = """
Tiny yet powerful utility for packaging multiple images to new one with custom aspect ratio and size.
"""

[dependencies]
eframe = {version = "0.15.0", features = ["persistence"] }
rfd = "0.5.1"
directories = "4.0.1"
image = "0.23.14"
crunch = "0.3.3"
chrono = "0.4.19"
imagesize = "0.9.0"
serde = "1.0.130"
zip = "0.5.13"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
